# flask_mega_tutorial

./: Makefile  pyproject.toml  setup.cfg
app/: __init__.py  routes.py
app/templates/: index.html
