[tool.poetry]
name = "flask-mega-tutorial"
version = "0.1.0"
description = ""
authors = ["Pavel Soroka <40a.pvl@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
